--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/redLight"
-        android:id="@+id/textView"
+        android:id="@+id/targetName"
         android:layout_below="@+id/buttonGreen"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -60,5 +60,16 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:onClick="openAboutPage"/>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/sendMsg"
+        android:id="@+id/button2"
+        android:layout_above="@+id/button"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="50dp"
+        android:onClick="onClickMessenger"/>
 
 </RelativeLayout>
