--- a/SherlockApp/src/main/res/layout/activity_main.xml
+++ b/SherlockApp/src/main/res/layout/activity_main.xml
@@ -8,9 +8,40 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/icon"
+        android:adjustViewBounds="true"
+        android:background="#fa2255"
+        android:scaleType="centerCrop"
+        android:src="@drawable/sherlock"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"/>
+
     <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:id="@+id/tvLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/who"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_below="@+id/icon"
+        android:layout_alignParentLeft="true" />
+    <TextView
+        android:id="@+id/tvInfo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_below="@+id/tvLabel"
+        android:layout_alignParentRight="true" />
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/makeAChoice"
+        android:id="@+id/button"
+        android:layout_below="@+id/tvInfo"
+        android:layout_alignParentLeft="true"
+        android:onClick="onClick"/>
 
 </RelativeLayout>
